Fix weird wrapping of header links

--- a/sopwith.css
+++ b/sopwith.css
@@ -10,6 +10,7 @@ code > span {
 
 header {
   margin-bottom: 10px;
+  padding-right: 0;
 }
 
 /* The "minimal" stylesheet sets width: 100% but this doesn't do
